--- a/template/src/oj/account/login.html
+++ b/template/src/oj/account/login.html
@@ -30,7 +30,9 @@
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-primary">提交</button>
+                <a class="btn btn-primary" href="http://200.200.0.33/ss/auth/att_oauth2/authorize?client_id=acm_oj&redirect_uri=http://{{ request.META.SERVER_NAME }}:{{ request.META.SERVER_PORT }}/api/login ">BBS登录</a>
             </div>
+
             <a href="/reset_password/">忘记用户名/密码</a><br>
             <a href="/register/">还没有帐号?点击注册</a>
 
